Update cover selection logic in `Work` class
# Replace `covers.get(0)` with `covers.getFirst` for improved clarity and consistency.